--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
         "all": "npm run build && npm run test"
     },
     "dependencies": {
+        "confit": "^2.0.3",
         "construx": "^1.0.0",
         "construx-copier": "^1.0.0",
-        "confit": "^2.0.3",
+        "deref": "^0.6.4",
         "eslint": "^1.10.3",
         "express": "^4.12.2",
         "kraken-js": "^2.0.0",
-        "mongodb": "~3.0.5",
-        "q": "~1.1.1",
         "lodash": "^4.17.11",
-        "deref": "^0.6.4",
-        "tv4": "^1.3.0",
-        "tv4-formats": "^2.0.0",
         "logger": "^0.0.1",
         "mongo-cursor-pagination": "^7.1.0",
-        "nodemon": "^1.18.9"
+        "mongodb": "~3.0.5",
+        "q": "~1.1.1",
+        "tv4": "^1.3.0",
+        "tv4-formats": "^2.0.0"
     },
     "devDependencies": {
         "grunt": "^0.4.5",
@@ -37,6 +36,7 @@
         "grunt-eslint": "^17.3.2",
         "grunt-mocha-cli": "^1.14.0",
         "mocha": "^1.18.0",
+        "nodemon": "^1.18.9",
         "supertest": "^0.9.0"
     }
 }
