--- a/package.json
+++ b/package.json
@@ -12,31 +12,30 @@
         "all": "npm run build && npm run test"
     },
     "dependencies": {
-        "confit": "^2.0.3",
-        "construx": "^1.0.0",
+        "confit": "^2.3.0",
+        "construx": "^1.0.1",
         "construx-copier": "^1.0.0",
-        "deref": "^0.6.4",
-        "eslint": "^1.10.3",
-        "express": "^4.12.2",
-        "kraken-js": "^2.0.0",
+        "deref": "^0.7.6",
+        "eslint": "^5.11.0",
+        "express": "^4.16.4",
+        "kraken-js": "^2.2.0",
         "lodash": "^4.17.11",
         "logger": "^0.0.1",
         "mongo-cursor-pagination": "^7.1.0",
-        "mongodb": "~3.0.5",
-        "q": "~1.1.1",
-        "tv4": "^1.3.0",
-        "tv4-formats": "^2.0.0"
+        "mongodb": "^3.0.11",
+        "q": "^1.5.1"
     },
     "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-cli": "^0.1.13",
+        "grunt": "^1.0.3",
+        "grunt-cli": "^1.3.2",
         "grunt-config-dir": "^0.3.2",
         "grunt-contrib-clean": "^0.6.0",
-        "grunt-copy-to": "0.0.10",
-        "grunt-eslint": "^17.3.2",
-        "grunt-mocha-cli": "^1.14.0",
-        "mocha": "^1.18.0",
+        "grunt-copy-browser-modules": "^7.0.1",
+        "grunt-copy-to": "0.0.12",
+        "grunt-eslint": "^21.0.0",
+        "grunt-mocha-cli": "^4.0.0",
+        "mocha": "^5.2.0",
         "nodemon": "^1.18.9",
-        "supertest": "^0.9.0"
+        "supertest": "^3.3.0"
     }
 }
