Fixed the database name to factcheck in config.json

--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
         ],
         "databases": {
             "core": "core",
-            "factCheck": "fact-check"
+            "factCheck": "factcheck"
         },
         "username": "",
         "passwd": ""
