--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
         ],
         "databases": {
             "core": "core",
-            "factCheck": "factcheck"
+            "factcheck": "factcheck"
         },
         "username": "",
         "passwd": ""
