--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "test": "grunt test",
         "build": "grunt build",
-        "start": "node server.js",
+        "start": "NODE_ENV=production node server.js",
         "dev": "nodemon server.js",
         "all": "npm run build && npm run test"
     },
