Changed database parameters to have single uri

--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,10 @@
 {
     "databaseConfig": {
-        "hosts": [
-            "localhost:27017"
-        ],
+        "uri": "",
         "databases": {
             "core": "core",
             "factcheck": "factcheck"
-        },
-        "username": "",
-        "passwd": ""
+        }
     },
     "specialization": {
     },
