--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "scripts": {
         "test": "grunt test",
         "build": "grunt build",
-        "start": "NODE_ENV=production node server.js",
-        "dev": "nodemon server.js",
+        "prod": "NODE_ENV=production node server.js",
+        "dev": "NODE_ENV=development nodemon server.js",
         "all": "npm run build && npm run test"
     },
     "dependencies": {
