--- a/package.json
+++ b/package.json
@@ -20,27 +20,39 @@
         "construx-copier": "^1.0.0",
         "cors": "^2.8.5",
         "deref": "^0.7.6",
-        "eslint": "^5.11.0",
+        "eslint": "^5.15.2",
         "eslint-config-airbnb": "^17.1.0",
         "express": "^4.16.4",
         "kraken-js": "^2.2.0",
         "lodash": "^4.17.11",
         "logger": "^0.0.1",
         "mongo-cursor-pagination": "^7.1.0",
-        "mongodb": "^3.0.11",
-        "q": "^1.5.1"
+        "mongodb": "^3.1.13",
+        "on-finished": "^2.3.0",
+        "q": "^1.5.1",
+        "winston": "^3.2.1",
+        "winston-daily-rotate-file": "^3.8.0"
     },
     "devDependencies": {
         "grunt": "^1.0.3",
         "grunt-cli": "^1.3.2",
         "grunt-config-dir": "^0.3.2",
         "grunt-contrib-clean": "^0.6.0",
+        "grunt-contrib-less": "^1.4.0",
         "grunt-copy-browser-modules": "^7.0.1",
         "grunt-copy-to": "0.0.12",
+        "grunt-curl": "^2.5.0",
+        "grunt-env": "^0.4.4",
         "grunt-eslint": "^21.0.0",
-        "grunt-mocha-cli": "^4.0.0",
+        "grunt-express-server": "^0.5.3",
+        "grunt-mocha-cli": "^3.0.0",
+        "grunt-mocha-istanbul": "^5.0.2",
+        "grunt-rpm": "^0.1.13",
+        "grunt-shell": "^2.1.0",
+        "grunt-zip": "^0.18.1",
+        "istanbul": "^0.4.5",
         "mocha": "^5.2.0",
-        "nodemon": "^1.18.9",
-        "supertest": "^3.3.0"
+        "nodemon": "^1.18.10",
+        "supertest": "^3.4.2"
     }
 }
