Integrated functional test framework, wrote simple tests for al REST APIs, wrote eloborated test case on factcheck for reference

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ Desktop.ini
 ######################
 # Logs
 ######################
+/logs
 *.log*
 
 ######################
@@ -141,3 +142,7 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+report.html
+/coverage
+
