--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "winston-daily-rotate-file": "^3.8.0"
     },
     "devDependencies": {
-        "grunt": "^1.0.3",
-        "grunt-cli": "^1.3.2",
+        "body-parser": "^1.18.3",
+        "chai": "^4.2.0",
+        "grunt": "^0.4.5",
+        "grunt-cli": "^0.1.13",
         "grunt-config-dir": "^0.3.2",
         "grunt-contrib-clean": "^0.6.0",
         "grunt-contrib-less": "^1.4.0",
@@ -51,6 +53,8 @@
         "grunt-shell": "^2.1.0",
         "grunt-zip": "^0.18.1",
         "istanbul": "^0.4.5",
+        "jest": "^24.5.0",
+        "jest-extended": "^0.11.1",
         "mocha": "^5.2.0",
         "nodemon": "^1.18.10",
         "supertest": "^3.4.2"
