--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dega-api",
-    "version": "0.1.0",
+    "version": "0.6.1",
     "description": "Public API to access dega",
     "author": "Factly Media &amp; Research LLC",
     "main": "index.js",
@@ -10,7 +10,7 @@
         "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
         "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
         "prod": "NODE_ENV=production node server.js",
-        "dev": "NODE_ENV=development nodemon server.js",
+        "dev": "NODE_ENV=development MONGODB_URI=mongodb://localhost:27017 nodemon server.js",
         "all": "npm run build && npm run test"
     },
     "dependencies": {
