--- a/public/api-doc/dega-api.yaml
+++ b/public/api-doc/dega-api.yaml
@@ -36,6 +36,11 @@ paths:
       produces:
         - application/json
       parameters:
+        - name: id
+          in: query
+          description: single id or an array of id to filter
+          required: false
+          type: string or array of string
         - name: slug
           in: query
           description: factcheck slug to filter
