--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "cors": "^2.8.5",
         "deref": "^0.7.6",
         "eslint": "^6.4.0",
-        "eslint-config-airbnb": "^18.0.1",
+        "eslint-config-airbnb-base": "^14.0.0",
         "express": "^4.16.4",
         "kraken-js": "^2.2.0",
         "lodash": "^4.17.11",
