--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "all": "npm run build && npm run test"
     },
     "dependencies": {
+        "@godaddy/terminus": "^4.2.0",
         "chance": "^1.1.0",
         "confit": "^2.3.0",
         "construx": "^1.0.1",
