--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
 
         // max-len set to 120 based on team poll
         "max-len": ["error", {
-            "code": 160,
+            "code": 300,
             "ignoreUrls": true,
             "ignoreComments": false,
             "ignoreRegExpLiterals": true,
@@ -45,6 +45,12 @@
         "browser": true,
         "mocha": true,
         "es6": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "ecmaFeatures": {
+          "experimentalObjectRestSpread": true
+        }
     },
     "extends": "eslint:recommended"
 }
