--- a/.eslintrc
+++ b/.eslintrc
@@ -47,10 +47,7 @@
         "es6": true
     },
     "parserOptions": {
-        "ecmaVersion": 6,
-        "ecmaFeatures": {
-          "experimentalObjectRestSpread": true
-        }
+        "ecmaVersion": "es2016"
     },
     "extends": "eslint:recommended"
 }
