client validator added in comman

--- a/config/config.json
+++ b/config/config.json
@@ -30,6 +30,13 @@
                 ]
             }
         },
+        "clientHeader": {
+            "enabled": true,
+            "priority": 119, 
+            "module": {
+              "name": "path:./lib/validateClientHeader.js" 
+            }
+        },
         "static": {
             "module": {
                 "arguments": [ "path:./.build" ]
